# mini_research_lab

./: .env.example  .gitignore  README.md  chat.py  cli.py  debug_chat.py  llm_chat.py  pyproject.toml  requirements.txt  user_config.json
notebooks/: 01_mean_reversion.ipynb  _template.ipynb
reports/tables/: master_experiment_summary.txt  mean_reversion_3d_to_1d_model_summary.txt  mean_reversion_3d_to_1d_regression.csv  mean_reversion_3d_to_1d_x_summary.csv  mean_reversion_3d_to_1d_y_summary.csv
reports/tables/mean_reversion_10d_to_1d/: bucketed_analysis.txt  model_summary.txt  regression.txt  x_summary.txt  y_summary.txt
reports/tables/mean_reversion_1d_to_1d/: bucketed_analysis.txt  model_summary.txt  regression.txt  x_summary.txt
reports/tables/mean_reversion_20d_to_1d/: bucketed_analysis.txt  model_summary.txt  regression.txt  x_summary.txt  y_summary.txt
reports/tables/mean_reversion_3d_to_1d/: bucketed_analysis.txt  model_summary.txt  regression.txt  x_summary.txt  x_summary_final.txt  y_summary.txt  y_summary_final.txt
reports/tables/mean_reversion_5d_to_1d/: bucketed_analysis.txt  model_summary.txt  regression.txt  x_summary.txt  y_summary.txt
reports/tables/mean_reversion_comparison/: comparison_summary.txt
src/mini_research_lab/: __init__.py  data_loader.py  experiment_specs.py  features.py  lab.py  plotting.py  summaries.py  user_config.py
src/mini_research_lab/core/: __init__.py  cross_symbol_interpreter.py  decisions.py  scoring.py  (+3 more)
tests/: test_lab.py  test_parameterized.py  test_parameterized_stability.py  test_parameterized_user_input.py
(+4 files in other folders)
